# modul8r

./: CLAUDE.md  CONTRIBUTING.md  LOGGING_FIX.md  README.md  TEST_FIX_PLAN.md  pyproject.toml  pytest.ini  pytest_asyncio.py  run_tests.py  test_logging_fix.py
docs/: enhanced-dashboard-prd.md  feasibility-assessment.md  mdstyle.md  prd.md
playwright-e2e/: README.md  playwright-e2e.md  profile-schema.yaml  profiles.yaml
src/modul8r/: config.py  logging_config.py  main.py  model_cache.py  performance_monitor.py  services.py  websocket_handlers.py
templates/: index.html
tests/: conftest.py  e2e_config.py  test_e2e_playwright.py  test_e2e_real_modules.py  test_main.py  test_model_cache.py  test_phase1_components.py  test_playwright.py  test_services.py
