[project]
name = "modul8r"
version = "0.1.0"
description = "Convert TTRPG adventure module PDFs to Markdown"
authors = [{ name = "Marsh Macy" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "jinja2",
    "openai",
    "pdf2image", 
    "python-multipart",
    "uvicorn[standard]",
    "structlog",
    "pydantic-settings",
    "tenacity",
    "asyncio-throttle",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-mock",
    "httpx",
    "playwright",
    "pyyaml",
    "jsonschema",
    "requests",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "RUF", "B", "SIM", "C90"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jsonschema>=4.25.0",
    "mypy>=1.17.0",
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "ruff>=0.12.4",
]

